--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
   google_sign_in: ^6.1.4
+  connectivity: ^3.0.6
+  cloud_firestore: ^4.8.2
 
 dev_dependencies:
 
