--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_sign_in: ^6.1.4
   connectivity: ^3.0.6
   cloud_firestore: ^4.8.2
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
 
